--- a/Main.fmx
+++ b/Main.fmx
@@ -8,4 +8,15 @@ object Form1: TForm1
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
   DesignerMasterStyle = 0
+  object Label1: TLabel
+    StyledSettings = [Family, Style, FontColor]
+    Position.X = 128.000000000000000000
+    Position.Y = 80.000000000000000000
+    Size.Width = 265.000000000000000000
+    Size.Height = 73.000000000000000000
+    Size.PlatformDefault = False
+    TextSettings.Font.Size = 24.000000000000000000
+    Text = 'Git'#31649#29702#12398#12486#12473#12488#12391#12377
+    TabOrder = 1
+  end
 end
