--- a/Main.fmx
+++ b/Main.fmx
@@ -16,7 +16,7 @@ object Form1: TForm1
     Size.Height = 73.000000000000000000
     Size.PlatformDefault = False
     TextSettings.Font.Size = 24.000000000000000000
-    Text = 'Git'#31649#29702#12398#12486#12473#12488#12391#12377
+    Text = 'Git'#31649#29702#12398#12486#12473#12488#12391#12377#12290'RADTest'#12391#36861#21152#12375#12414#12375#12383#12290
     TabOrder = 1
   end
 end
