--- a/NewForm.fmx
+++ b/NewForm.fmx
@@ -8,4 +8,10 @@ object Form2: TForm2
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
   DesignerMasterStyle = 0
+  object Label1: TLabel
+    Position.X = 168.000000000000000000
+    Position.Y = 120.000000000000000000
+    Text = 'Label1'
+    TabOrder = 1
+  end
 end
